--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ env.VERSION }}
-          name: Release ${{ env.VERSION }}
+          tag_name: v${{ env.BASE_VERSION }}
+          name: Release ${{ env.BASE_VERSION }}
           draft: false
           prerelease: false
