--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Set Version Based on Branch
         run: |
           chmod +x versioning.sh
-          ./versioning.sh
+          ./github/workflows/versioning.sh
 
 #      - name: Publish to Maven Central
 #        run: ./gradlew publish
@@ -54,7 +54,7 @@ jobs:
         run: echo "JitPack auto-builds from GitHub"
 
       - name: Create GitHub Release
-        if: github.ref == 'refs/heads/feature/*'
+        if: github.ref == 'refs/heads/feature/.*'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.VERSION }}
