update check feature branch on creaing tag (experiment)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         run: echo "JitPack auto-builds from GitHub"
 
       - name: Create GitHub Release
-        if: github.ref == 'refs/heads/feature/.*'
+        if: github.ref == 'refs/heads/feature/'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.VERSION }}
