--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,7 +54,7 @@ jobs:
         run: echo "JitPack auto-builds from GitHub"
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/heads/feature/')
+        if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.VERSION }}
