updated tag name by version (#3)

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,8 +40,8 @@ jobs:
 
       - name: Set Version Based on Branch
         run: |
-          chmod +x versioning.sh
-          ./versioning.sh
+          chmod +x .github/workflows/versioning.sh
+          ./.github/workflows/versioning.sh
 
 #      - name: Publish to Maven Central
 #        run: ./gradlew publish
@@ -57,7 +57,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ env.BASE_VERSION }}
-          name: Release ${{ env.BASE_VERSION }}
+          tag_name: v${{ env.VERSION }}
+          name: Release ${{ env.VERSION }}
           draft: false
           prerelease: false
