--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,6 +58,6 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.VERSION }}
-          name: Release ${{ env.VERSION }}
+          name: v${{ env.VERSION }}
           draft: false
           prerelease: false
